fix launch and badge alignment

--- a/assets/css/style.styl
+++ b/assets/css/style.styl
@@ -25,7 +25,7 @@
 	height:100px
 	bottom: 10%
 	left: 50%
-	margin-left: -50px
+	margin-left: -30px
 	pointer-events: none
 	span
 		font-size: 0.5em
@@ -409,7 +409,7 @@
 			color: white
 			font-size:2.2em
 		.log-author
-			padding: 10px 0px
+			padding: 20px 30px 10px 0px
 			color:#ed4d4a
 			font-size:1.5em
 			text-transform:uppercase
